# code_analyser

./: .env.example  .gitignore  README.md  interactive.py  pyproject.toml  use_case.md
src/: config.py
src/cli/: main.py
src/embeddings/: __init__.py  embedding_service.py  vector_store.py
src/generation/: generation_service.py
src/indexer/: __init__.py  code_indexer.py
src/models/: __init__.py  code_concepts.py  code_unit.py
src/parser/: __init__.py  base_parser.py  go_parser.py  java_parser.py  javascript_parser.py  python_parser.py  statement_extractor.py
src/search/: __init__.py  concept_scorer.py  query_analyzer.py  query_intent.py  result_aggregator.py  semantic_search.py
src/utils/: display_helpers.py  language_detector.py  logger.py  metadata_extractor.py
